Se agregan cambios para agregar imagen cargando

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1245,3 +1245,14 @@ width:50% !important;
   min-width: 20% !important;
   max-width: 101% !important;
 }
+
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../images/CARGANDO.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .8;
+}
