Se agregan cambios para corrección de defectos y se corrigen las migas de pan oara el rol de Contribuyentes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1256,3 +1256,7 @@ width:50% !important;
     background: url('../images/CARGANDO.gif') 50% 50% no-repeat rgb(249,249,249);
     opacity: .8;
 }
+
+.hwomargin{
+	margin-left: 0px !important;
+}
