--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25157,3 +25157,6 @@ span.pasos {
   background: url('../images/CARGANDO.gif') 50% 50% no-repeat #f9f9f9;
   opacity: .8;
 }
+.hwomargin {
+  margin-left: 0px !important;
+}
