Se agregan cambios de estilo para la parte de Firmantes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1260,3 +1260,15 @@ width:50% !important;
 .hwomargin{
 	margin-left: 0px !important;
 }
+
+.form-group .newaltobtn,
+.newaltobtn {
+  height: 25px !important;
+  min-height: 20px !important;
+  min-width: 20% !important;
+  max-width: 192px !important;
+  padding: 1px 1px 1px 1px!important;
+  font-size: 11px !important;
+  margin-top: 25px !important;
+
+}
