--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25160,3 +25160,13 @@ span.pasos {
 .hwomargin {
   margin-left: 0px !important;
 }
+.form-group .newaltobtn,
+.newaltobtn {
+  height: 25px !important;
+  min-height: 20px !important;
+  min-width: 20% !important;
+  max-width: 192px !important;
+  padding: 1px 1px 1px 1px!important;
+  font-size: 11px !important;
+  margin-top: 23px !important;
+}
