Se agregan cambios para Obligaciones Pendientes de contribuyente

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1272,3 +1272,9 @@ width:50% !important;
   margin-top: 25px !important;
 
 }
+
+.tablesearch tbody tr td{
+	font-size: 12px !important;
+	  font-family:  'Helvetica', 'Arial', sans-serif !important;
+	
+}
