Customer Service (Chat) - Estilos CSS

--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/SdhbackofficeWidget/sdhbackofficewidget.scss
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/SdhbackofficeWidget/sdhbackofficewidget.scss
@@ -44,6 +44,6 @@ th.header, td.header{
   color: white;
 }
 th.subHeader, td.subHeader{
-  background-color: #666666;
+  background-color: #008DCA;
   color: white;
 }
