--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1280,3 +1280,7 @@ width:50% !important;
 	
 }
 
+.form-group .alto_select, .alto_select{
+font-size: 12px !important; 
+padding: 1px !important;
+}
