--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/SdhbackofficeWidget/sdhbackofficewidget.zul
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/SdhbackofficeWidget/sdhbackofficewidget.zul
@@ -10,76 +10,101 @@
 		http://www.hybris.com/schema/cockpitng/zul/zul.xsd"
  		height="100%">
 
-    <script>
-        function connect() {
-             var frame = document.getElementById("chatSpaceOne").contentWindow;
-             frame.postMessage('Hello to iframe from parent!', 'https://publicsector.local:9002/backoffice');
-        }
-    </script>
+ 		<script>
+            var ws;
+            function connect(userId, userName, subjectType, content, sessionId) {
+                var frame = document.getElementById("chatSpaceOne").contentWindow;
+                frame.postMessage({
+                        'messageType' : 'pickNewChatSession',
+                        'agentId' : 'agent123123', //Customizar
+                        'agentName' : 'SDH Agente', //Customizar
+                        'sessionId' : sessionId,
+                        'userId': userId,
+                        'userName': userName,
+                        'subjectType': subjectType,
+                        'content': content
+                    },window.location.href);
+            }
 
-	<div height="100%" style="background-color:white">
-        <n:table class="sdhBackofficeWidget">
-            <n:tr height="5%">
-                <n:th class="header" width="60%">Clientes Activos</n:th>
-                <n:th class="header" width="40%">Sesiones</n:th>
-            </n:tr>
-            <n:tr height="95%">
-                <n:td width="60%">
-                    <n:table class="sdhBackofficeWidget">
-                        <n:tr height="41px">
-                            <n:td>
-                                <n:table class="sdhBackofficeWidget">
-                                    <n:tr height="5%">
-                                        <n:td class="subHeader">ID USUARIO</n:td>
-                                        <n:td class="subHeader">NOMBRE</n:td>
-                                        <n:td class="subHeader">FECHA/HORA</n:td>
-                                        <n:td class="subHeader">TOMAR</n:td>
-                                    </n:tr>
-                                 </n:table>
-                             </n:td>
-                        </n:tr>
-                        <n:tr >
-                            <n:td valign="top">
-                                <div class="table-container">
-                                    <n:table class="scroll" >
-                                        <n:tbody class="scroll">
-                                            <n:tr class="scroll">
-                                                <n:td width="25%">jair.r04@gmail.com</n:td>
-                                                <n:td width="25%">Edson Jair</n:td>
-                                                <n:td width="25%">10/03/20 12:46:00</n:td>
-                                                <n:td width="25%">
-                                                    <n:button label="Gumball" onclick="connect()">TOMAR USUARIO</n:button>
-                                                </n:td>
-                                            </n:tr>
-                                            <n:tr class="scroll">
-                                                <n:td width="25%">aiko.lozadaf@gmail.com</n:td>
-                                                <n:td width="25%">Aiko Falcon</n:td>
-                                                <n:td width="25%">10/03/20 12:46:00</n:td>
-                                                <n:td width="25%">
-                                                    <n:button label="Gumball" onclick="connect()">TOMAR USUARIO</n:button>
-                                                </n:td>
-                                            </n:tr>
-                                        </n:tbody>
-                                    </n:table>
-                                </div>
-                            </n:td>
-                        </n:tr>
-                    </n:table>
-                </n:td>
-                <n:td width="40%">
-                    <n:table class="sdhBackofficeWidget">
-                        <n:tr height="100%">
-                            <n:td>
-                                <n:iframe style="width:100%;height:100%"
-                                    frameborder="0.5"
-                                    id="chatSpaceOne"
-                                    src="https://publicsector.local:9002/sdhstorefront/chat/customer">
-                                </n:iframe>
-                            </n:td>
-                        </n:tr>
-                    </n:table>
-                </n:td>
-            </n:tr>
-        </n:table>
-	</div>
+            $(window).on('load', function () {
+                var host = document.location.host;
+                ws = new WebSocket("wss://"+host+"/sdhstorefront/chatEndPoint/AGENT/JAIR04/JAIR ROA/HOLA/NO ASUNTO");
+                ws.onmessage = function(event) {
+                    var message = JSON.parse(event.data);
+                    console.log(message);
+                    if(message.contentType == "LIST"){ //Print all actived customer in table
+                        $.each(message.activedCustomer, function (key, value) {
+                            addCustomer(value.from, value.userName, value.subjectType, value.content, key, value.isPicked);
+                        });
+                    }else if(message.contentType == "NEWCUSTM"){ //Print new customer in table
+                        addCustomer(message.from, message.userName, message.subjectType, message.content, message.userSessionId, false);
+                    }else if(message.contentType == "DELCUSTM"){ //Remove cutomer from table
+                        var rowTable = document.getElementById(message.from);
+                        rowTable.parentNode.removeChild(rowTable);
+                     }else if(message.contentType == "BKLCUSTM"){
+                        var button = document.getElementById("btn_"+message.from);
+                        button.disabled = true;
+                     }else if(message.contentType == "UNBKLCUSTM"){
+                        var button = document.getElementById("btn_"+message.from);
+                        button.disabled = false;
+                     }
+                };
+
+            });
+
+            function addCustomer(userId, usarName, subjectType, content, sessionId, isPicked){
+                var table = document.getElementById("customerTable");
+                var row = table.insertRow(1);
+                row.className = "scroll";
+                row.id = userId;
+
+                var cell = row.insertCell(0);
+                var cel2 = row.insertCell(1);
+                var cel3 = row.insertCell(2);
+                var cel4 = row.insertCell(3);
+
+                cell.innerHTML = userId;
+                cel2.innerHTML = usarName;
+                cel3.innerHTML = subjectType;
+
+                var btn = document.createElement("BUTTON");
+                var txt = document.createTextNode("TOMAR USUARIO");
+
+                btn.id = "btn_"+userId;
+                if(isPicked){btn.disabled = true;}
+                btn.appendChild(txt);
+                btn.onclick = function() { connect(userId, usarName, subjectType, content, sessionId); };
+
+                cel4.appendChild(btn);
+            }
+
+        </script>
+
+        <splitlayout vflex="1" hflex="1" orient="horizontal" >
+            <div sclass="area" vflex="1" hflex="5" id="contentTable">
+                <html>
+                    <table class="scroll" id="customerTable">
+                        <thead class="scroll" style="text-align: left; height: 41px; background-color: #d9edf7" >
+                            <tr class="scroll">
+                              <th width="25%">Email</th>
+                              <th width="25%">Nombre</th>
+                              <th width="25%">Asunto</th>
+                              <th width="25%">Evento</th>
+                            </tr>
+                        </thead>
+                        <tbody class="scroll" id="customerTbody" style="background-color: white">
+                            <tr class="scroll" >
+                            </tr>
+                        </tbody>
+                    </table>
+                </html>
+            </div>
+            <div sclass="area" vflex="1"  hflex="3">
+                <n:iframe style="width:100%;height:100%"
+                    frameborder="0.5"
+                    id="chatSpaceOne"
+                    src="https://publicsector.local:9002/sdhstorefront/chat/customer?userType=AGENT">
+                </n:iframe>
+            </div>
+        </splitlayout>
 </widget>
