Sea gregan cambios para obligaciones pendientes y estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1284,3 +1284,7 @@ width:50% !important;
 font-size: 12px !important; 
 padding: 1px !important;
 }
+
+th {
+    text-align: center !important;
+}
