Se quita mensaje para ica "Si tienes más de 20 registros a declarar necesitas pasar a ayuda ICA " de Presentar declarcion y se agrega adelanto de mi buzón

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1288,3 +1288,8 @@ padding: 1px !important;
 th {
     text-align: center !important;
 }
+
+.glyphicon {
+    color: #356ab5;
+    font-size: large;
+}
