--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -10835,6 +10835,8 @@ fieldset[disabled] .btn-primary.active {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #356ab5;
+  font-size: large;
   color: rgba(255, 255, 255, 0.7);
   font-size: 120px;
   overflow: hidden;
@@ -11610,6 +11612,8 @@ fieldset[disabled] .btn-primary.active {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #356ab5;
+  font-size: large;
 }
 .accordion .panel .panel-heading .accordion-toggle:before {
   content: "\e113";
@@ -25181,4 +25185,8 @@ span.pasos {
 }
 th {
   text-align: center !important;
+}
+.glyphicon {
+  color: #356ab5;
+  font-size: large;
 }
