Chat and Faqs reverdes without Asm module

--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/SdhbackofficeWidget/sdhbackofficewidget.zul
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/SdhbackofficeWidget/sdhbackofficewidget.zul
@@ -28,7 +28,8 @@
 
             $(window).on('load', function () {
                 var host = document.location.host;
-                ws = new WebSocket("wss://"+host+"/bogota/chatEndPoint/AGENT/UserTest/User Test/Message/Subject");
+                //ws = new WebSocket("wss://"+host+"/bogota/chatEndPoint/AGENT/JAIR04/JAIR ROA/HOLA/NO ASUNTO");
+                ws = new WebSocket("wss://publicsector.local:9002/bogota/chatEndPoint/AGENT/JAIR04/JAIR ROA/HOLA/NO ASUNTO");
                 ws.onmessage = function(event) {
                     var message = JSON.parse(event.data);
                     console.log(message);
@@ -52,7 +53,8 @@
 
                 var frame = document.getElementById("chatSpaceOne");
                 var currentUrl = window.location.href;
-                frame.src = currentUrl.replace("backoffice/", "bogota/chat/customer?userType=AGENT");;
+                frame.src = currentUrl.replace("backoffice/", "bogota/chat/customer?userType=AGENT");
+                //frame.src = "bogota/chat/customer?userType=AGENT";
             });
 
             function addCustomer(userId, usarName, subjectType, content, sessionId, isPicked){
