Cambios de estilo a color gris

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -4,11 +4,11 @@ header {
 }
 
 .navigation__overflow {
-    background: #E80B2B;
+    background: #F9F9F9;
 }
 
 .main-header .navigation--bottom {
-    background: #E80B2B;
+    background: #F9F9F9;
 }
 
 
@@ -21,11 +21,11 @@ header {
 }
 
 .login-section .headline, .register-section .headline, .checkout-login .headline {
-       color: #e80b2b;
+       color: #e50d2d;
 }
 
 .navigation--button .nav__link:hover{
-	backgrond: #e80b2b;
+	backgrond: #F9F9F9;
 }
 
 a, button {
@@ -37,25 +37,25 @@ a:hover {
 }
 
 .btn-primary {
-    background-color: #bfbfbf;
-    border-color: #bfbfbf;
-    color: #ffffff;
+    background-color: #F9F9F9;
+    border-color: #F9F9F9;
+    color: #000000;
 }
 
 .btn-primary:hover {
-    background-color: #bfbfbf;
-    border-color: #bfbfbf;
-    color: #ffffff;
+    background-color: #F9F9F9;
+    border-color: #F9F9F9;
+    color: #000000;
 }
 
 .btn-primary:focus {
-    background-color: #bfbfbf;
-    border-color: #bfbfbf;
-    color: #ffffff;
+    background-color: #F9F9F9;
+    border-color: #F9F9F9;
+    color: #000000;
 }
 
 .footer__top {
-    border-bottom: 1px solid #f38595;
+    border-bottom: 1px solid #F9F9F9;
 }
 
 .btn:hover, .btn:active:hover, .btn.active:hover {
@@ -70,22 +70,44 @@ a:hover {
 
 
 .navigation--bottom .nav__links--primary .sub__navigation {
-    background: #e80b2b;
+    background: #F9F9F9;
 }
 
 .navigation--bottom
 .nav__link:hover{
-	background:#e80b2b;
+	background:#F9F9F9;
 }
 
+.btn-primary:active:hover, .btn-primary:active:focus {
+ 
+    background: #F9F9F9;
+}
+
+
 .navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li:hover {
-    background: #e80b2b !important;
+    background: #F9F9F9 !important;
 }
 
 .navigation--bottom .nav__links--primary .sub-navigation-section ul.sub-navigation-list > li > a:hover, .navigation--bottom .nav__links--primary .sub-navigation-section ul.sub-navigation-list > li > a:focus {
-    background: #e80b2b;
+    background: #F9F9F9;
 }
 
 .breadcrumb-section .breadcrumb a {
-    color: #fff;
+    color: #000000;
+}
+
+.navigation--bottom .nav__links--products li a {
+    color: #000000;
+}
+
+
+
+@media (min-width: 1024px){
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list a {
+    color: #000000;
+}
+}
+
+.navigation--bottom .show-sub .nav__link a:after {
+    border-bottom: 10px solid #f9f9f9;
 }
