Se agregan cambios de estilo a gris

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -111,3 +111,12 @@ a:hover {
 .navigation--bottom .show-sub .nav__link a:after {
     border-bottom: 10px solid #f9f9f9;
 }
+
+
+a, button {
+    color: #000000;
+}
+
+a:hover {
+   color: #000000;
+}
