Se cambia estilo de Rojo y amarillo a Gris

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -13,27 +13,19 @@ header {
 
 
 .breadcrumb-section {
-    background: #ffb71b;
+    background: #F9F9F9;
 }
 
 .breadcrumb-section .breadcrumb {
-    background: #ffb71b;
+    background: #F9F9F9;
 }
 
 .login-section .headline, .register-section .headline, .checkout-login .headline {
-       color: #e50d2d;
+       color: #104d83;
 }
 
 .navigation--button .nav__link:hover{
 	backgrond: #F9F9F9;
-}
-
-a, button {
-    color: #ffb71b;
-}
-
-a:hover {
-   color: #ffb71b;
 }
 
 .btn-primary {
@@ -63,9 +55,9 @@ a:hover {
 }
 
 .main-footer .copyright .pop-over-toggle {
-        background-color: #ffb71c;
-    border-color: #ffb71c;
-    border: 2px solid #ffb71c;
+        background-color: #F9F9F9;
+    border-color: #F9F9F9;
+    border: 2px solid #F9F9F9;
 }
 
 
@@ -112,11 +104,6 @@ a:hover {
     border-bottom: 10px solid #f9f9f9;
 }
 
-
-a, button {
-    color: #000000;
-}
-
-a:hover {
-   color: #000000;
+.main-footer .copyright .pop-over-toggle {
+    color: #000;
 }
