--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25200,25 +25200,18 @@ header {
   background: #F9F9F9;
 }
 .breadcrumb-section {
-  background: #ffb71b;
+  background: #F9F9F9;
 }
 .breadcrumb-section .breadcrumb {
-  background: #ffb71b;
+  background: #F9F9F9;
 }
 .login-section .headline,
 .register-section .headline,
 .checkout-login .headline {
-  color: #e50d2d;
+  color: #104d83;
 }
 .navigation--button .nav__link:hover {
   backgrond: #F9F9F9;
-}
-a,
-button {
-  color: #ffb71b;
-}
-a:hover {
-  color: #ffb71b;
 }
 .btn-primary {
   background-color: #F9F9F9;
@@ -25244,9 +25237,9 @@ a:hover {
   outline: 2px solid transparent;
 }
 .main-footer .copyright .pop-over-toggle {
-  background-color: #ffb71c;
-  border-color: #ffb71c;
-  border: 2px solid #ffb71c;
+  background-color: #F9F9F9;
+  border-color: #F9F9F9;
+  border: 2px solid #F9F9F9;
 }
 .navigation--bottom .nav__links--primary .sub__navigation {
   background: #F9F9F9;
@@ -25279,10 +25272,6 @@ a:hover {
 .navigation--bottom .show-sub .nav__link a:after {
   border-bottom: 10px solid #f9f9f9;
 }
-a,
-button {
-  color: #000000;
-}
-a:hover {
-  color: #000000;
+.main-footer .copyright .pop-over-toggle {
+  color: #000;
 }
