Se agregan cambios para terminos y condiciones en el registro y mi rit

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -111,3 +111,7 @@ header {
 .container_new {
     padding-top: 17%;
 }
+
+.modal-dialog .modal-header, #cboxContent .modal-header, .modal-dialog #cboxTitle, #cboxContent #cboxTitle {
+    background-color: #F9F9F9;
+}
