Se agregan cambios para check de buzon en el registro

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -115,3 +115,8 @@ header {
 .modal-dialog .modal-header, #cboxContent .modal-header, .modal-dialog #cboxTitle, #cboxContent #cboxTitle {
     background-color: #F9F9F9;
 }
+
+.form-group .checkbox .checkedlabel {
+  background: url(../../../responsive/common/images/checkbox_tick.png) no-repeat scroll 0 0;
+  border: 1px solid #cccccc;
+}
