Se agregan ajustes para la alineación de los campos en general

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -120,3 +120,16 @@ header {
   background: url(../../../responsive/common/images/checkbox_tick.png) no-repeat scroll 0 0;
   border: 1px solid #cccccc;
 }
+
+//SE agregan ajustes de estilo en generarl
+.container_new_page {
+    width: 85%;
+//    border: 1px solid #000;
+}
+
+.container {
+    width: 85%;
+//    border: 1px solid #000;
+}
+
+//Termina ajuste de estilo general
