Se quita el "*" de las redes sociales.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25288,3 +25288,9 @@ header {
   background: url(../../../responsive/common/images/checkbox_tick.png) no-repeat scroll 0 0;
   border: 1px solid #cccccc;
 }
+.container_new_page {
+  width: 85%;
+}
+.container {
+  width: 85%;
+}
