Se agregan cambios para seccion Valor Retenido de Declaración ICA y primer ajuste para Spinner de cargando cuando hay funcionalidad en los botones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -133,3 +133,15 @@ header {
 }
 
 //Termina ajuste de estilo general
+
+//SE agrega estilo para imagen cargando cuando se oprimen botones
+.cargandoSpinner {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    /* width: 100%; */
+    /* height: 100%; */
+    z-index: 9999;
+    opacity: .9;
+    transform: translate(-50%, 50%);
+}
