--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25294,3 +25294,13 @@ header {
 .container {
   width: 85%;
 }
+.cargandoSpinner {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  /* width: 100%; */
+  /* height: 100%; */
+  z-index: 9999;
+  opacity: .9;
+  transform: translate(-50%, 50%);
+}
