--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25304,3 +25304,101 @@ header {
   opacity: .9;
   transform: translate(-50%, 50%);
 }
+.branding-mobile {
+  border-bottom: solid 1px #ffffff;
+  background-color: #ffffff;
+}
+.sticky-nav-top .liUserSign {
+  background-color: #f9f9f9;
+  color: #000000;
+}
+@media (max-width: 1023px) {
+  .main-header .navigation--bottom {
+    background: #ffffff;
+  }
+  .navigation--bottom.js-enquire-offcanvas-navigation .close-nav button {
+    background-color: #F9F9F9;
+    height: 100%;
+    width: 100%;
+    display: inline-block;
+    overflow: hidden;
+    border: none;
+  }
+  .navigation--bottom.js-enquire-offcanvas-navigation .close-nav button span {
+    color: #000000;
+  }
+  .navigation--bottom .nav__links--products {
+    display: block;
+  }
+  .navigation--bottom .nav__links--products {
+    background-color: #f9f9f9;
+  }
+  .navigation--bottom .nav__links--products li {
+    background-color: #f9f9f9 !important;
+  }
+  .navigation--bottom .nav__links--products {
+    max-width: 100%;
+    height: auto !important;
+    margin-left: -22px;
+    margin-right: -15px;
+    width: 100%;
+    display: block;
+    justify-content: center;
+    padding-left: 25px;
+    padding-right: 5px;
+    margin-bottom: 0;
+  }
+  .navigation__overflow {
+    background-color: #f9f9f9 !important;
+  }
+  .navigation--bottom .userGroup #signedInUserOptionsToggle {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    padding: 0;
+  }
+  .navigation--bottom .navigation__overflow {
+    left: -380px;
+    top: 0;
+    height: 100% !important;
+    overflow-y: auto;
+  }
+  .offcanvas .sticky-nav-top {
+    width: 100% !important;
+  }
+  .navigation--bottom .nav__links--products {
+    height: auto !important;
+    max-width: 100% !important;
+    width: 100% !important;
+    display: block !important;
+    justify-content: center !important;
+  }
+  .navigation--bottom .nav__links--primary-has__sub .nav__link--drill__down {
+    color: #000000;
+  }
+  .navigation--bottom .nav__links--primary .sub-navigation-section {
+    background: #f9f9f9;
+    margin-left: 20px;
+  }
+  .sticky-nav-top .userSign {
+    color: #000000;
+  }
+  .navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list {
+    padding-left: 10px;
+  }
+  .tableident,
+  .tableangrav {
+    width: 100% !important;
+  }
+  .container_new_page {
+    margin-top: 30px;
+  }
+  .navigation--bottom .nav__links--primary .sm-back {
+    color: #000000;
+    padding: 5px 30px;
+  }
+  .glyphicon {
+    font-size: medium;
+  }
+}
