Se alinean input a la derecha

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -277,7 +277,10 @@ max-width: 100% !important;
     font-size: 8 !important;
 }
 
+.form-group .newalto, .newalto {
 
+    text-align: right !important; 
+}
 
 
 
