Ajustes wro addons

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25402,3 +25402,11 @@ header {
     font-size: medium;
   }
 }
+.form-group .newaltobtn,
+.newaltobtn {
+  font-size: 8 !important;
+}
+.form-group .newalto,
+.newalto {
+  text-align: right !important;
+}
