Se agregan cambios para responsive

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -147,6 +147,14 @@ header {
 }
 
 
+.mostrarMD{
+	display:block;
+}
+
+.mostrarXS{
+	display:none;
+}
+
 //Sección para RESPONSIVE
 .branding-mobile {
     border-bottom: solid 1px #ffffff;
@@ -282,7 +290,91 @@ max-width: 100% !important;
     text-align: right !important; 
 }
 
+@media (max-width: 769px) and (min-width: 321px){
+.container_new {
+     padding-top: 25% !important; 
+}
 
+header {
+    position: absolute !important;
+}
+
+.form-group .tamnew, .tamnew {
+    padding-left: 5px;
+}
+
+.navigation--bottom .nav__link {
+    width: -webkit-fill-available !important;
+    text-align: center;
+}
+
+//.navigation--middle .mobile__nav__row.mobile__nav__row--table, .navigation--middle .mobile__nav__row .mobile__nav__row--table {
+//    display: table !important;
+//    width: 100%;
+//    position: static;
+//}
+
+.navigation--bottom .nav__link {
+    width: auto;
+    text-align: center;
+}
+
+.navigation--bottom .nav__links--primary-has__sub .nav__link {
+    width: 67% !important;
+}
+
+//.branding-mobile {
+//   position: fixed;
+//    z-index: 100;
+//    width: 100%;
+//    margin-bottom: 1px;
+//}
+
+ .table > tbody > tr > td, .table > tfoot > tr > td {
+    font-size: small !important;
+}
+
+//.offcanvas .sticky-nav-top {
+//    position: fixed;
+//    z-index: 100;
+//    width: 100%;
+//    margin-bottom: 1px;
+//}
+//.navigation--middle {
+//     position: fixed;
+//    z-index: 100;
+//    width: 100%;
+//    margin-bottom: 1px;
+//}
+
+.form-group .form-control {
+    font-size: 12px;
+    padding: 5px;
+ width: 100% !important;
+
+}
+
+.login-section {
+    margin-left: 10px;
+}
+
+.container_new_page {
+    margin-top: 5px;
+}
+
+.mostrarXS{
+	display:block;
+}
+
+.mostrarMD{
+	display:none;
+}
+
+.form-control .addressXS{
+	width: -webkit-fill-available !important;
+}
+
+}
 
 
 
