Se agregan cambios para responsive de delineación urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -374,9 +374,54 @@ header {
 	width: -webkit-fill-available !important;
 }
 
+.breadcrumb-section {
+    padding-left: 14px;
+    padding-right: 14px;
+}
+.breadcrumb-section .breadcrumb {
+    font-size: 11px;
 }
 
+.breadcrumb {
+    height: auto;
+}
 
+.navigation--bottom {
+//    width: 60% !important;
+//    margin-left: 5px;
+
+}
+
+div.dataTables_length, div.dataTables_filter, div.dataTables_paginate, div.dataTables_info {
+    padding: 2px;
+    font-size: 12px;
+}
+
+div.dataTables_length, div.dataTables_filter, div.dataTables_paginate, div.dataTables_info {
+    padding: 2px;
+    font-size: 12px;
+}
+
+.form-group .new_alto, .new_alto {
+    min-height: 20px !important;
+    padding: 1px !important;
+    max-width: 200% !important;
+	width: 100% !important;
+}
+
+.form-group .newalto, .newalto {
+ min-height: 20px !important;
+    padding: 1px !important;
+    max-width: 200% !important;
+	width: 100% !important;
+}
+
+}
+
+.form-control .deliRadicado{
+	margin-left: -25px !important; 
+width: 100px !important
+}
 
 
 
