--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25304,6 +25304,12 @@ header {
   opacity: .9;
   transform: translate(-50%, 50%);
 }
+.mostrarMD {
+  display: block;
+}
+.mostrarXS {
+  display: none;
+}
 .branding-mobile {
   border-bottom: solid 1px #ffffff;
   background-color: #ffffff;
@@ -25409,4 +25415,51 @@ header {
 .form-group .newalto,
 .newalto {
   text-align: right !important;
+}
+@media (max-width: 769px) and (min-width: 321px) {
+  .container_new {
+    padding-top: 25% !important;
+  }
+  header {
+    position: absolute !important;
+  }
+  .form-group .tamnew,
+  .tamnew {
+    padding-left: 5px;
+  }
+  .navigation--bottom .nav__link {
+    width: -webkit-fill-available !important;
+    text-align: center;
+  }
+  .navigation--bottom .nav__link {
+    width: auto;
+    text-align: center;
+  }
+  .navigation--bottom .nav__links--primary-has__sub .nav__link {
+    width: 67% !important;
+  }
+  .table > tbody > tr > td,
+  .table > tfoot > tr > td {
+    font-size: small !important;
+  }
+  .form-group .form-control {
+    font-size: 12px;
+    padding: 5px;
+    width: 100% !important;
+  }
+  .login-section {
+    margin-left: 10px;
+  }
+  .container_new_page {
+    margin-top: 5px;
+  }
+  .mostrarXS {
+    display: block;
+  }
+  .mostrarMD {
+    display: none;
+  }
+  .form-control .addressXS {
+    width: -webkit-fill-available !important;
+  }
 }
