--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -407,6 +407,7 @@ div.dataTables_length, div.dataTables_filter, div.dataTables_paginate, div.dataT
     padding: 1px !important;
     max-width: 200% !important;
 	width: 100% !important;
+	text-align: left !important;
 }
 
 .form-group .newalto, .newalto {
@@ -414,6 +415,23 @@ div.dataTables_length, div.dataTables_filter, div.dataTables_paginate, div.dataT
     padding: 1px !important;
     max-width: 200% !important;
 	width: 100% !important;
+	text-align: left !important;
+}
+
+h2 {
+    font-size: 1 em !important;
+}
+
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list {
+    padding-left: 0px;
+}
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li {
+    width: 160px;
+}
+
+.centrar_rowICA{
+	 padding-left: 10px; 
+	margin-right: 10px;
 }
 
 }
@@ -423,5 +441,9 @@ div.dataTables_length, div.dataTables_filter, div.dataTables_paginate, div.dataT
 width: 100px !important
 }
 
+.centrar_rowICA{
+	 padding-left: 400px; 
+	margin-right:-400px;
+}
 
 
