Se agregan cambios para responsive de ica y menu de agentes autorizados y se agrega pagina de Oficina en mantenimiento

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -430,8 +430,19 @@ h2 {
 }
 
 .centrar_rowICA{
-	 padding-left: 10px; 
-	margin-right: 10px;
+	 padding-left: 10px !important; 
+	margin-right: 10px !important;
+}
+
+input[type="file"] {
+
+    font-size: 12px;
+}
+
+.retenido_ICA {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    width: 90% !important;
 }
 
 }
@@ -446,4 +457,9 @@ width: 100px !important
 	margin-right:-400px;
 }
 
+.retenido_ICA{
+	padding-left: 2px; 
+	padding-right: 2px; 
+	width: 5% !important
+}
 
