Adding Email at bp searching proccess (backoffice)

--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/explodedbpfinder/explodedbpfinder.zul
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/explodedbpfinder/explodedbpfinder.zul
@@ -53,9 +53,18 @@
                             <label value="Business Partner (BP):"/>
                         </cell>
                         <cell>
-                                <textbox id="businessPartnerOutput" readonly="true" width="100%"/>
+                             <textbox id="businessPartnerOutput" readonly="true" width="100%"/>
                         </cell>
                     </row>
+                    <row>
+                        <cell>
+                            <label value="Email:"/>
+                        </cell>
+                        <cell>
+                             <textbox id="businessPartnerEmailOutput" readonly="true" width="100%"/>
+                        </cell>
+                    </row>
+
                     <row>
                         <cell></cell>
                         <cell>
