Se agregan cambios para boton de copiado en preguntas frecuentes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -467,3 +467,35 @@ width: 100px !important
 input[type="search"] {
   min-width: 100px !important;
 }
+
+.buttonCopy {
+  background-image: url('../../../responsive/common/images/copy.png');
+  position: relative;
+  top: 5px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0.5em 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+
+.buttonCopy:hover,
+.buttonCopy:focus {
+ // background-image: url('../../../responsive/common/images/copy.png');
+background-color: black;
+  position: relative;
+  top: 5px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0.5em 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
