--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25540,3 +25540,32 @@ header {
 input[type="search"] {
   min-width: 100px !important;
 }
+.buttonCopy {
+  background-image: url('../../../responsive/common/images/copy.png');
+  position: relative;
+  top: 5px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0.5em 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+.buttonCopy:hover,
+.buttonCopy:focus {
+  background-color: black;
+  position: relative;
+  top: 5px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0.5em 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
