Se agrega cambio para el alt del submenu

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -499,3 +499,9 @@ background-color: black;
   text-indent: 100%;
   overflow: hidden;
 }
+
+
+//Cambio para el alto del menu
+.navigation--bottom .nav__links--products li a {
+    height: auto !important;
+}
