Ajuste para desplegar infoobjeto de Delineacion para Agente Autorizado

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25569,3 +25569,6 @@ input[type="search"] {
   text-indent: 100%;
   overflow: hidden;
 }
+.navigation--bottom .nav__links--products li a {
+  height: auto !important;
+}
